01 - OpenCRVS Documentation/v1.7/product-specifications/admin-functions/17.-user-management.md
---
title: "21. User management"
source_url: "https://documentation.opencrvs.org/v1.7/product-specifications/admin-functions/17.-user-management"
markdown_url: "https://documentation.opencrvs.org/v1.7/product-specifications/admin-functions/17.-user-management.md"
version: "v1.7"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:0038ee44dc933cd619253cd04be00673e80de72e6aa21afd2149feb5ff730eea"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.7/product-specifications/admin-functions/17.-user-management.md).

# 21. User management

OpenCRVS offers an intuitive and user-friendly interfaces to efficiently administer and control user access and roles. Supporting administrators to create, edit, and manage user profiles, and provides a suite of tools for maintaining security and system integrity. This includes functions like password resets, username reminders, and user deactivation/reactivation.

Outlined below are main features to support system administrators in their role:

### Organisation

Accessible from the side navigation for user with `scope:organisation.read-locations:all` or `scope:organisation.read-locations:my-jurisdiction` or `scope:organisation.read-locations:my-office` the Organisation view facilitates seamless navigation through the administrative structure of the user's country.&#x20;

The different organisation scope control if a user can view all county office team pages, Jonathanst their jurisdiction of just their own office.&#x20;

This feature serves as a user-friendly tool for locating specific administrative locations, such as the Registration Office within a particular district, making the exploration of administrative hierarchies efficient and straightforward.

### Office

The Office view displays a list of users assigned to the Registration Office, including their respective roles and statuses. \
\
Scopes: `user.read:all` , `user.read:my-jurisdiction` , `user.read:my-office` control if the logged in user can navigate to a user's profile page that logs their audit history.

### Create user

From the Office team view a user with `user.create:all` or `user.create:my-jurisdiction`can create a new user account.&#x20;

* A user with `user.create:all` can create and assign a user to any office. A u
* A user with `user.create:my-jurisdiction` can only create and assign users to an office in the same jurisdiction as thmeselves
  * eg. Admin user is in a State Office. Therefore they can create and assign users to any District office within the State&#x20;

The required details for creating a new user include:

* First name(s)
* Last name
* Phone number
* Email address
* National Identification Number (NID)
* Role
* Digital signature (only if the new user’s role is a Registrar or National Registrar)
* Device

Upon confirmation, the newly created user receives login instructions, including their username and a temporary password, via SMS or email based on the system's configuration. For a detailed understanding of the process for a new user logging into OpenCRVS for the first time, please refer to the Onboarding section.

Usernames are generated automatically, based on the user's first name(s) and last name. For example, a user named Jane Smith would have the username: j.smith.

The creation of a new user is diligently logged and securely stored in User Audit.

### Edit user

From the Office view or User Audit view a user with `user.update:all` or `user.update:my-jurisdiction`have the ability to modify user details. They can do this by locating the user, clicking on the submenu button (represented by three dots), and selecting the “Edit user” option. The editable details encompass:

* Assigned office
* First name(s)
* Last name
* Phone number
* Email address
* National Identification Number (NID)
* Role
* Digital signature (applicable only if the user’s role is a Registrar or National Registrar)
* Device

Every modification is meticulously logged and securely stored in User Audit.

### Send username reminder

Users have the option to request a reminder for their username independently. However, if they encounter difficulties, assistance is available from users with `scopes:user.update`. Administrators can locate the user in the system and select the "Send username reminder" option from the menu. Based on the system's configuration, the user will then receive an SMS or an email containing their username.

All instance of a username reminder being sent is logged and stored in User Audit.

### Reset user password

Users have the ability to reset their own passwords. However, if they encounter difficulties a user with `scopes:user.update` can assist. The administrator can locate the user in the system and select the “Reset password” option from the menu. Depending on the system configuration, this action will trigger an SMS or an email containing a temporary password, which enables the user to undergo the onboarding steps once again.

All instances of password resets are diligently logged and stored in User Audit. This provides a clear record of all password alterations and ensures the system's ongoing integrity.

### Deactivate

User access can be effectively managed by deactivation. A user with `scopes:user.update` can locate the user in the system and select the “Deactivate” option from the user menu.

Upon selecting this option, the administrator is prompted to record a reason for deactivation:

* No longer an employee
* Being investigated due to suspicious activity on their account
* Other (please provide a reason in the comments)

Administrators can also add any additional comments for clarity. Upon confirmation, the user's access is revoked, making the system inaccessible to them. However, if circumstances change, a deactivated user can be reactivated users with `scopes:user.update`

For auditing purposes, a log is generated whenever a user is deactivated. This audit trail is stored in User Audit, providing a transparent record of all user access changes

{% embed url="<https://youtu.be/7arUJtcVpZ8>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.7/product-specifications/admin-functions/17.-user-management.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
